# flaxen-spade

./: .env.example  .gitignore  .travis.yml  DEVELOP.md  FLOW.md  README.md  app.py  cache.py  cli.py  conftest.py  factory.py  lint.sh  pyproject.toml  requirements.txt  some_testing.py  test_local.py  test_sanity.py  uwsgi.ini  wsgi.py
.github/workflows/: flask.yml
backend/: api.py
commandbus/: best_time_to_travel.py  merge_train.py  pop_Mrt_routes_on_weekends_publicholiday.py  pop_mrt_routes_on_weekends.py  popular_end_trip.py  popular_stations_peak_hour.py  shopping_mall_traffic.py  some_testing.py
frontend/: index.py
koro/: datamall.py  dataset.py  geo.py  manipulation.py  resolve.py  tasks.py
raw_datasets/large/: README.md
raw_datasets/merged/: train-data.csv
raw_datasets/od/mangled/: BY_TAPIN_transport_node_train_202006.csv  BY_TAPIN_transport_node_train_202007.csv  BY_TAPIN_transport_node_train_202008.csv  BY_TAPOUT_transport_node_train_202006.csv  BY_TAPOUT_transport_node_train_202007.csv  BY_TAPOUT_transport_node_train_202008.csv
raw_datasets/raw_other/: train-coordinates.csv  train-station-updated.csv  train-station-updated2.csv  train-station.csv
raw_datasets/results/: best_time_to_travel.json  my-sample-results.json  pop_mrt_routes_on_weekends_publicholiday.json  popular_end_trip.json  popular_stations.json  shopping-mall-passenger-volume.json  test.json
raw_datasets/static/: mallCoordinates.json
scripts/: sort-static-nodes.sh
static/: app.css  app.js
templates/: index.html  services.html  tasks.html
templates/bus/: bus_index.html  index.html  service.html  stop.html  stop_index.html
templates/layouts/: master.html  nav.html  sidebar.html  vue-templates.html
templates/mall/: index.html  information.html
templates/tasks/: best_time.html  index.html  popular_end_trips.html  popular_mrt_routes.html  popular_stations.html
