[tool.poetry]
name = "flaxen-spade"
version = "0.1.0"
description = ""
authors = ["matical <matic@amatsuka.me>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
Flask-Caching = "^1.9.0"
python-dotenv = "^0.14.0"
redis = "^3.5.3"
pytest = "^6.1.0"
flask-debugtoolbar = "^0.11.0"
requests = "^2.24.0"
requests-toolbelt = "^0.9.1"


[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.5.4"
mypy = "^0.782"

[tool.black]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

