[tool.poetry]
name = "flaxen-spade"
version = "0.1.0"
description = ""
authors = ["matical <matic@amatsuka.me>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-Caching = "^1.9.0"
black = "^20.8b1"
flask = "^1.1.2"
flask-debugtoolbar = "^0.11.0"
flask-konch = "^2.0.0"
isort = "^5.5.4"
mypy = "^0.782"
pendulum = "^2.1.2"
polyline = "^1.4.0"
ptpython = "^3.0.7"
pytest = "^6.1.0"
python-dotenv = "^0.14.0"
redis = "^3.5.3"
requests = "^2.24.0"
requests-toolbelt = "^0.9.1"
wheel = "^0.35.1"
pytest-flask = "^1.0.0"
uwsgi = "^2.0.19"

[tool.poetry.dev-dependencies]


[tool.black]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

